Correction animation safarie3//

--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -69,8 +69,7 @@
         transform: scaleX(0.95);
     }
     100%{
-        background: -webkit-linear-gradient(90deg, $color-secondary 30%, $color-primary 90%);
-        -webkit-background-clip: text;
+        color: $color-secondary;
         transform: scaleY(1);
         transform: scaleX(1);
     }
